// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default section page click tracking 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleHeadline": "This is tile headline",
    "articleId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "articleUrl": "/article/123",
    "sectionName": "News",
    "sliceDepth": Object {
      "itemNumber": 1,
      "total": 9,
    },
    "sliceName": "LeadOneAndFourSlice",
    "tileName": "lead",
  },
  "component": "Tile",
  "object": "Slice",
}
`;

exports[`default section page click tracking: onArticlePress 1`] = `
Array [
  Array [
    Object {
      "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
      "url": "/article/123",
    },
  ],
]
`;

exports[`puzzle section page click tracking 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "puzzleId": "0",
    "puzzleTitle": "Times Concise medium No 7881",
    "puzzleUrl": "/crossword/123",
    "sectionName": "Puzzles",
    "sliceDepth": Object {
      "itemNumber": 1,
      "total": 7,
    },
    "sliceName": "Puzzle",
    "tileName": "Puzzle",
  },
  "component": "Tile",
  "object": "Slice",
}
`;

exports[`puzzle section page click tracking: onPuzzlePress 1`] = `
Array [
  Array [
    Object {
      "id": "0",
      "title": "Times Concise medium No 7881",
      "url": "/crossword/123",
    },
  ],
]
`;
